--- a/app/public/less/_header.less
+++ b/app/public/less/_header.less
@@ -167,14 +167,16 @@
         text-align: center;
         cursor: pointer;
         z-index: 10;
+        display: flex;       
+
+        .taproot-icon {
+            top: 0;
+        }
     }
 
     .header-content-container .search-toggle {
-        // height: 1em;
-        // line-height: 1;
-        // width: 1em;
         margin-left: 0.6em;
-        transform-origin: 42% 48%;        
+        transform-origin: 42% 48%; 
     }
 
 
